src/lattec/parser/LatteParser.py
# Generated from lattec/parser/Latte.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LatteParser ( Parser ):

    grammarFileName = "Latte.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "';'", "':'", 
                     "'{'", "'['", "'('", "'}'", "']'", "')'", "','", "'.'", 
                     "'int'", "'boolean'", "'string'", "'void'", "'&&'", 
                     "'||'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'!'", "'='", "'++'", 
                     "'--'", "'return'", "'if'", "'else'", "'while'", "'for'", 
                     "'true'", "'false'", "'class'", "'extends'", "'new'", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "MULTICOMMENT", "SEM", "COLON", 
                      "LBRACE", "LBRACK", "LPAREN", "RBRACE", "RBRACK", 
                      "RPAREN", "COMMA", "DOT", "INT", "BOOL", "STR", "VOID", 
                      "AND", "OR", "ADD", "SUB", "MUL", "DIV", "MOD", "LT", 
                      "LEQ", "GT", "GEQ", "EQ", "NEQ", "NOT", "ASS", "INCR", 
                      "DECR", "RETURN", "IF", "ELSE", "WHILE", "FOR", "TRUE", 
                      "FALSE", "CLS", "EXTENDS", "NEW", "NULL", "NUMBER", 
                      "ID", "WS", "STRING" ]

    RULE_program = 0
    RULE_topDef = 1
    RULE_argVec = 2
    RULE_arg = 3
    RULE_block = 4
    RULE_clsElem = 5
    RULE_stmt = 6
    RULE_arrAcc = 7
    RULE_identVec = 8
    RULE_type_ = 9
    RULE_base_type = 10
    RULE_basic_type = 11
    RULE_new_expr_type = 12
    RULE_item = 13
    RULE_expr = 14
    RULE_addOp = 15
    RULE_mulOp = 16
    RULE_relOp = 17

    ruleNames =  [ "program", "topDef", "argVec", "arg", "block", "clsElem", 
                   "stmt", "arrAcc", "identVec", "type_", "base_type", "basic_type", 
                   "new_expr_type", "item", "expr", "addOp", "mulOp", "relOp" ]

    EOF = Token.EOF
    COMMENT=1
    MULTICOMMENT=2
    SEM=3
    COLON=4
    LBRACE=5
    LBRACK=6
    LPAREN=7
    RBRACE=8
    RBRACK=9
    RPAREN=10
    COMMA=11
    DOT=12
    INT=13
    BOOL=14
    STR=15
    VOID=16
    AND=17
    OR=18
    ADD=19
    SUB=20
    MUL=21
    DIV=22
    MOD=23
    LT=24
    LEQ=25
    GT=26
    GEQ=27
    EQ=28
    NEQ=29
    NOT=30
    ASS=31
    INCR=32
    DECR=33
    RETURN=34
    IF=35
    ELSE=36
    WHILE=37
    FOR=38
    TRUE=39
    FALSE=40
    CLS=41
    EXTENDS=42
    NEW=43
    NULL=44
    NUMBER=45
    ID=46
    WS=47
    STRING=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.TopDefContext)
            else:
                return self.getTypedRuleContext(LatteParser.TopDefContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LatteParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.topDef()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.INT) | (1 << LatteParser.BOOL) | (1 << LatteParser.STR) | (1 << LatteParser.VOID) | (1 << LatteParser.CLS) | (1 << LatteParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TopDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_topDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FnDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def LPAREN(self):
            return self.getToken(LatteParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(LatteParser.RPAREN, 0)
        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def argVec(self):
            return self.getTypedRuleContext(LatteParser.ArgVecContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnDef" ):
                listener.enterFnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnDef" ):
                listener.exitFnDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnDef" ):
                return visitor.visitFnDef(self)
            else:
                return visitor.visitChildren(self)


    class ClsDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.name = None # Token
            self.supercls = None # Token
            self.copyFrom(ctx)

        def CLS(self):
            return self.getToken(LatteParser.CLS, 0)
        def LBRACE(self):
            return self.getToken(LatteParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(LatteParser.RBRACE, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)
        def EXTENDS(self):
            return self.getToken(LatteParser.EXTENDS, 0)
        def clsElem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClsElemContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClsElemContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClsDef" ):
                listener.enterClsDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClsDef" ):
                listener.exitClsDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClsDef" ):
                return visitor.visitClsDef(self)
            else:
                return visitor.visitChildren(self)



    def topDef(self):

        localctx = LatteParser.TopDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDef)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LatteParser.INT, LatteParser.BOOL, LatteParser.STR, LatteParser.VOID, LatteParser.ID]:
                localctx = LatteParser.FnDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.type_()
                self.state = 42
                localctx.name = self.match(LatteParser.ID)
                self.state = 43
                self.match(LatteParser.LPAREN)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.INT) | (1 << LatteParser.BOOL) | (1 << LatteParser.STR) | (1 << LatteParser.VOID) | (1 << LatteParser.ID))) != 0):
                    self.state = 44
                    self.argVec()


                self.state = 47
                self.match(LatteParser.RPAREN)
                self.state = 48
                self.block()
                pass
            elif token in [LatteParser.CLS]:
                localctx = LatteParser.ClsDefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.match(LatteParser.CLS)
                self.state = 51
                localctx.name = self.match(LatteParser.ID)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LatteParser.EXTENDS:
                    self.state = 52
                    self.match(LatteParser.EXTENDS)
                    self.state = 53
                    localctx.supercls = self.match(LatteParser.ID)


                self.state = 56
                self.match(LatteParser.LBRACE)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.INT) | (1 << LatteParser.BOOL) | (1 << LatteParser.STR) | (1 << LatteParser.VOID) | (1 << LatteParser.CLS) | (1 << LatteParser.ID))) != 0):
                    self.state = 57
                    self.clsElem()
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 63
                self.match(LatteParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgVecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ArgContext)
            else:
                return self.getTypedRuleContext(LatteParser.ArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.COMMA)
            else:
                return self.getToken(LatteParser.COMMA, i)

        def getRuleIndex(self):
            return LatteParser.RULE_argVec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgVec" ):
                listener.enterArgVec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgVec" ):
                listener.exitArgVec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgVec" ):
                return visitor.visitArgVec(self)
            else:
                return visitor.visitChildren(self)




    def argVec(self):

        localctx = LatteParser.ArgVecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_argVec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.arg()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.COMMA:
                self.state = 67
                self.match(LatteParser.COMMA)
                self.state = 68
                self.arg()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)


        def ID(self):
            return self.getToken(LatteParser.ID, 0)

        def getRuleIndex(self):
            return LatteParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = LatteParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.type_()
            self.state = 75
            localctx.name = self.match(LatteParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LatteParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LatteParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LatteParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(LatteParser.LBRACE)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.SEM) | (1 << LatteParser.LBRACE) | (1 << LatteParser.LPAREN) | (1 << LatteParser.INT) | (1 << LatteParser.BOOL) | (1 << LatteParser.STR) | (1 << LatteParser.VOID) | (1 << LatteParser.SUB) | (1 << LatteParser.NOT) | (1 << LatteParser.RETURN) | (1 << LatteParser.IF) | (1 << LatteParser.WHILE) | (1 << LatteParser.FOR) | (1 << LatteParser.TRUE) | (1 << LatteParser.FALSE) | (1 << LatteParser.NEW) | (1 << LatteParser.NULL) | (1 << LatteParser.NUMBER) | (1 << LatteParser.ID) | (1 << LatteParser.STRING))) != 0):
                self.state = 78
                self.stmt()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(LatteParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClsElemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_clsElem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FieldContext(ClsElemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.ClsElemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def SEM(self):
            return self.getToken(LatteParser.SEM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)


    class MethodContext(ClsElemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.ClsElemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def topDef(self):
            return self.getTypedRuleContext(LatteParser.TopDefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)



    def clsElem(self):

        localctx = LatteParser.ClsElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_clsElem)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = LatteParser.FieldContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.type_()
                self.state = 87
                self.match(LatteParser.ID)
                self.state = 88
                self.match(LatteParser.SEM)
                pass

            elif la_ == 2:
                localctx = LatteParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.topDef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identVec(self):
            return self.getTypedRuleContext(LatteParser.IdentVecContext,0)

        def ASS(self):
            return self.getToken(LatteParser.ASS, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def SEM(self):
            return self.getToken(LatteParser.SEM, 0)
        def arrAcc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ArrAccContext)
            else:
                return self.getTypedRuleContext(LatteParser.ArrAccContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAss" ):
                listener.enterAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAss" ):
                listener.exitAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss" ):
                return visitor.visitAss(self)
            else:
                return visitor.visitChildren(self)


    class RetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(LatteParser.RETURN, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def SEM(self):
            return self.getToken(LatteParser.SEM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet" ):
                listener.enterRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet" ):
                listener.exitRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet" ):
                return visitor.visitRet(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.true_stmt = None # StmtContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(LatteParser.IF, 0)
        def LPAREN(self):
            return self.getToken(LatteParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(LatteParser.RPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class CondElseContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.true_stmt = None # StmtContext
            self.false_stmt = None # StmtContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(LatteParser.IF, 0)
        def LPAREN(self):
            return self.getToken(LatteParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(LatteParser.RPAREN, 0)
        def ELSE(self):
            return self.getToken(LatteParser.ELSE, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondElse" ):
                listener.enterCondElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondElse" ):
                listener.exitCondElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondElse" ):
                return visitor.visitCondElse(self)
            else:
                return visitor.visitChildren(self)


    class VRetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(LatteParser.RETURN, 0)
        def SEM(self):
            return self.getToken(LatteParser.SEM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVRet" ):
                listener.enterVRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVRet" ):
                listener.exitVRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVRet" ):
                return visitor.visitVRet(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class DeclContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ItemContext)
            else:
                return self.getTypedRuleContext(LatteParser.ItemContext,i)

        def SEM(self):
            return self.getToken(LatteParser.SEM, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.COMMA)
            else:
                return self.getToken(LatteParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.true_stmt = None # StmtContext
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(LatteParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(LatteParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(LatteParser.RPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class SExpContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def SEM(self):
            return self.getToken(LatteParser.SEM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSExp" ):
                listener.enterSExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSExp" ):
                listener.exitSExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSExp" ):
                return visitor.visitSExp(self)
            else:
                return visitor.visitChildren(self)


    class ForEachContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(LatteParser.FOR, 0)
        def LPAREN(self):
            return self.getToken(LatteParser.LPAREN, 0)
        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def COLON(self):
            return self.getToken(LatteParser.COLON, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)
